# CoRider-Assignment

./: .gitignore  Dockerfile  README.md  app.py  config.py  pyproject.toml  requirements.txt  resources.py
models/: user.py
