[tool.poetry]
name = "corider-assignment"
version = "0.1.0"
description = ""
authors = ["Rohit Kumar <gahlyanrohit18@gmail.com>"]
readme = "README.md"
packages = [{include = "corider_assignment"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.1"
pymongo = "^4.3.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
